# ulco-pfa-etudiant

./: .gitignore  README.md
projets/baltig/: Makefile  app.cabal  shell.nix
projets/baltig/data/: database.sql
projets/baltig/nix/: release.nix
projets/baltig/src/: client.hs
projets/baltig/src/Baltig/: Model.hs  Routes.hs
projets/baltig/src/Gitlab/: Api.hs
projets/baltig/static/: styles.css
projets/breakthrough/: breakthrough.cabal  default.nix
projets/breakthrough/app/cli/: Main.hs
projets/breakthrough/app/gui/: Main.hs
projets/breakthrough/src/: Game.hs
projets/breakthrough/test/: GameSpec.hs
projets/game/: README.md  default.nix  game.cabal
projets/game/app/: client.hs  server.hs
projets/game/src/: Game.hs  Model.hs  Net.hs  ServerModel.hs
projets/html2md/: default.nix  html2md.cabal
projets/html2md/app/: Main.hs
projets/html2md/data/: test2.html  test3.html  test4.html  test5.html  test6.html
projets/html2md/src/: Codegen.hs  Parser.hs  Syntax.hs
projets/html2md/test/: CodegenSpec.hs  ParserSpec.hs
projets/paletizer/: default.nix  out.pnm  paletizer.cabal
projets/paletizer/app/: Main.hs
projets/paletizer/data/: banasiewicz.pnm  cliffs.pnm
projets/paletizer/src/: Image.hs  Paletizer.hs  Pnm.hs
projets/paletizer/test/: PaletizerSpec.hs  PnmSpec.hs
projets/tictactoe/: tictactoe.cabal
projets/ulcoforum/: README.md  ulcoforum.cabal
projets/ulcoforum/app/: Main.hs
projets/ulcoforum/src/: View.hs
tp-adt/: hello-gloss.hs  jours.hs  list.hs  shell.nix
tp-api/github/: GithubApi.hs  shell.nix
tp-api/isohello/: Makefile  app.cabal  hie.yaml
tp-api/isohello/nix/: docker.nix
tp-api/isohello/src/: server.hs
tp-api/math/: client.hs  shell.nix
tp-api/music/: Music.hs  Route.hs  client-servant.hs  music-server.hs  server-scotty.hs  server-servant.hs  shell.nix
tp-backend/hello-scotty/: hello-scotty.cabal
tp-backend/hello-scotty/app/: Main.hs
tp-backend/monfauxrhum/: README.md  monfauxrhum.cabal
tp-backend/monfauxrhum/app/: Main.hs
tp-backend/ptivelo/: hie.yaml  ptivelo.cabal
tp-backend/ptivelo/app/: Main.hs
tp-backend/ptivelo/nix/: release.nix
tp-backend/ptivelo/src/: Model.hs  View.hs
tp-classes/: either.hs  mcpi-state.hs  shell.nix  user.hs
tp-codegen/exos/: shell.nix
tp-codegen/genalbum/: README.md  genalbum.cabal
tp-codegen/genalbum/app/: Main.hs
tp-codegen/genalbum/data/: genalbum.json
tp-codegen/genalbum/src/: Album.hs
tp-compilation/data/: test5.json
tp-compilation/list-expr/: list.cabal
tp-compilation/list-expr/app/: Main.hs
tp-compilation/list-expr/src/: Codegen.hs  Parser.hs  Syntax.hs
tp-compilation/list-expr/test/: CodegenSpec.hs  ParserSpec.hs
tp-compilation/list-simple/: default.nix  list.cabal
tp-compilation/list-simple/app/: Main.hs
tp-compilation/list-simple/src/: Codegen.hs  Syntax.hs
tp-compilation/list-simple/src/Parser/: Monadic.hs  Parsec.hs  ReadP.hs  Recursive1.hs  Recursive2.hs
tp-compilation/list-simple/test/: CodegenSpec.hs
tp-compilation/list-simple/test/Parser/: MonadicSpec.hs  ParsecSpec.hs  ReadPSpec.hs  Recursive1Spec.hs  Recursive2Spec.hs
tp-compilation/mycalc/: default.nix
tp-compilation/mycalc-readp/: mycalc.cabal
tp-compilation/mycalc-readp/app/: Main.hs
tp-compilation/mycalc-readp/src/Mycalc/: Codegen.hs  Parser.hs  Syntax.hs
tp-compilation/mycalc-readp/test/Mycalc/: CodegenSpec.hs  ParserSpec.hs  SyntaxSpec.hs
tp-compilation/myjson/: default.nix  myjson.cabal
tp-compilation/myjson/app/: Main.hs
tp-compilation/myjson/data/: test3.json
tp-compilation/myjson/src/: Codegen.hs  Parser.hs  Syntax.hs
tp-compilation/myjson/test/: CodegenSpec.hs  ParserSpec.hs  SyntaxSpec.hs
tp-concurrent/echo-servant/: default.nix  echo-servant.cabal
tp-concurrent/echo-servant/app/: client.hs  server.hs
tp-concurrent/echo-servant/src/: HttpApp.hs  Model.hs  WsApp.hs
tp-concurrent/game-local/: default.nix  game.cabal
tp-concurrent/game-local/app/: Main.hs
tp-concurrent/game-local/src/: Game.hs
tp-concurrent/random-delay-mt/: Main.hs
tp-concurrent/ws-clock/: client.hs  client.html  server.hs  shell.nix
tp-database/movie-selda/: main-test.hs  shell.nix
tp-database/movie-simple/: Movie2.hs  movie.sql  shell.nix
tp-database/music/: shell.nix
tp-database/webmusic/: default.nix  hie.yaml  webmusic.cabal
tp-database/webmusic/app/: Main.hs
tp-database/webmusic/data/: music-pg.sql
tp-database/webmusic/src/: DbSeldaSqlite.hs
tp-env/arithm/: Eval.hs  Parse.hs  hie.yaml
tp-env/blog/: .gitignore  default.nix
tp-env/helloapp/: Main.hs  helloapp.cabal
tp-env/random/: print10rand0.hs
tp-parsing/exos/: aeson-test2.json  aeson-test3.json  aeson3.hs  overloadedstrings.hs  pandoc-test1.md  shell.nix
tp-parsing/scrapimjson/: README.md  scrapimjson.cabal
tp-rappels1/: fizzbuzz.hs  majTab.hs  mul2.hs  saisir4entiers.hs  shell.nix
tp-rappels2/: hello-gtk.hs  higher-order.hs  nocase.hs  shell.nix  totalpoly.hs
tp1/: fizzbuzz.hs  seuil.hs  tictactoe.hs
tp10/movie-selda/: Movie.hs  shell.nix
tp10/movie-simple/: Movie1.hs  Movie2.hs  main-test.hs
tp10/music/: music.sql  shell.nix
tp10/webmusic/: stack.yaml
tp11/count-front/: app.cabal
tp11/count-front/public/: index.html
tp11/count-front/src/: client.hs
tp12/count-front/: Makefile  default.nix
tp12/draw-canvas/: app.cabal  shell.nix
tp12/draw-canvas/config/: server.config
tp12/draw-canvas/nix/: nixpkgs.nix
tp12/draw-canvas/src/: client.hs  server.hs
tp12/echo/: shell.nix
tp13/github/: Repo.hs  User.hs  client-custom.hs  client-servant.hs
tp13/math/: MathApi.hs  server.hs  shell.nix
tp14/baltig/: README.md
tp2/: list-func.hs  shell.nix
tp3/: abr.hs  list.hs  shell.nix  user.hs
tp4/: compute.hs  either.hs  mcpi.hs  shell.nix  tree.hs
tp5/arithm/: Expr.hs  Main.hs  hie.yaml
tp5/blog/: .gitlab-ci.yml  Makefile  shell.nix
tp5/helloapp/: Main.hs  default.nix  hie.yaml
tp5/random/: print10rand.hs
tp6/data/: fail1.json  test4.json
tp6/mycalc/: hie.yaml  mycalc.cabal  stack.yaml
tp7/exos/: aeson-test1.json  aeson-test3.json  aeson1.hs  (+5 more)
(+68 files in other folders)
