cabal-version:      2.2
name:               breakthrough
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O2
    default-language:   Haskell2010
    build-depends:      base, vector, random, gloss

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Game

executable breakthrough-cli
    import:             deps
    hs-source-dirs:     app/cli
    main-is:            Main.hs
    build-depends:      breakthrough

executable breakthrough-gui
    import:             deps
    hs-source-dirs:     app/gui
    main-is:            Main.hs
    build-depends:      breakthrough

test-suite spec
    import:             deps
    main-is:            Spec.hs
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    build-depends:      breakthrough, hspec
    other-modules:      GameSpec

