cabal-version:      2.2
name:               game
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base, bytestring, gloss, stm, text, websockets

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Game, ServerModel, Net

executable game-server
    import:             deps
    hs-source-dirs:     app
    main-is:            server.hs
    build-depends:      game

executable game-client
    import:             deps
    hs-source-dirs:     app
    main-is:            client.hs
    build-depends:      game

