cabal-version:      2.2
name:               html2md
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Codegen Parser Syntax

executable html2md
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      html2md

test-suite spec
    import:             deps
    main-is:            Spec.hs
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    build-depends:      html2md, hspec
    other-modules:      CodegenSpec ParserSpec 

