cabal-version:      2.2
name:               ulcoforum
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    View

executable ulcoforum
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      ulcoforum

