cabal-version:      2.2
name:               hello-scotty
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      aeson, base, lucid, scotty, text, text-show,
                        wai-extra, wai-middleware-static

executable hello-scotty
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs

