cabal-version:      2.2
name:               ptivelo
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      aeson, base, lucid, scotty, text,
                        wai-extra, wai-middleware-static

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Model View

executable ptivelo
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      ptivelo

