cabal-version:      2.2
name:               myjson
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Codegen
                        Parser
                        Syntax

executable myjson
    import:             deps
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      myjson

test-suite spec
    import:             deps
    main-is:            Spec.hs
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    build-depends:      myjson, hspec
    other-modules:      CodegenSpec
                        ParserSpec
                        SyntaxSpec

