cabal-version:      2.2
name:               echo-servant
version:            1.0
build-type:         Simple
license:            MIT

common deps
    ghc-options:        -Wall -O
    default-language:   Haskell2010
    build-depends:      base, 
                        aeson,
                        lucid,
                        network,
                        servant,
                        servant-lucid,
                        servant-server,
                        text,
                        wai,
                        wai-extra,
                        wai-websockets,
                        warp,
                        websockets

library
    import:             deps
    hs-source-dirs:     src
    exposed-modules:    Model HttpApp WsApp

executable echo-servant-client
    import:             deps
    hs-source-dirs:     app
    main-is:            client.hs
    build-depends:      echo-servant

executable echo-servant-server
    import:             deps
    hs-source-dirs:     app
    main-is:            server.hs
    build-depends:      echo-servant

