name:                   app
version:                0.1
build-type:             Simple
cabal-version:          >=1.10

executable client
    if !impl(ghcjs)
        buildable:      False

    ghcjs-options:      -dedupe -O2 -Wall
    cpp-options:        -DGHCJS_BROWSER
    default-language:   Haskell2010
    hs-source-dirs:     src
    main-is:            client.hs
    build-depends:      base, miso

